k8s/kyverno-policies/audit/02-require-signed-images-audit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: securerag-require-signed-images-audit
  annotations:
    policies.kyverno.io/title: Verify Image Signature Keyless (Audit)
    policies.kyverno.io/category: Software Supply Chain Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Verifies OCI image signatures using keyless OIDC validation via local Sigstore.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: verify-image-signature-keyless
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - securerag-hub
                - recette
      verifyImages:
        - imageReferences:
            - "registry.securerag.local/*"
            - "localhost:5001/securerag-hub-*"
          required: true
          mutateDigest: false
          verifyDigest: false
          attestors:
            - count: 1
              entries:
                - keyless:
                    url: http://fulcio.sigstore-system
                    rekor:
                      url: http://rekor.sigstore-system
                    issuer: http://keycloak.sigstore-system/realms/securerag-cicd
                    subject: jenkins-cosign@securerag.local
